--- a/jfa1/less/jfa.less
+++ b/jfa1/less/jfa.less
@@ -8,7 +8,7 @@ body{.h;.w;.psr;.fs(12px);.ffmy('Microsoft YaHei','Lucida Grande',Arial,sans-ser
 a{.tdn;.c(#4a62af);.csr;&:hover{.c(@red)}}
 img {.val}
 dl.sflt dt.flt{.flt}
-input,textarea,select{.otl}
+input,textarea,select,summary{.otl}
 iframe,input,textarea{.bdn}
 table {
 	border:0;margin:0;border-collapse:collapse;border-spacing:0;
